# dot-xmonad

./: .gitignore  Makefile  README.md  build  dmenu_run.bash  dzen2-update.hs  stack.yaml  xmonad.hs
lib/Zem/: DzenTwo.hs  StatusUpdate.hs  Utils.hs  VolumeControl.hs  XkbSwitch.hs
zem/: CHANGELOG.md  zem.cabal
zem/laptop/: Main.hs
zem/main/: Main.hs
zem/src/Zem/: AutoRandr.hs  Config.hs  StatusUpdate.hs  Utils.hs
