name:                zem
version:             0.1
synopsis:            Personal xmonad utilities
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Heikki Kallasjoki
maintainer:          fis@zem.fi
-- copyright:
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     Zem.AutoRandr, Zem.StatusUpdate, Zem.Utils, Zem.XkbSwitch
  -- other-modules:
  other-extensions:    DeriveDataTypeable
  build-depends:       base >=4.12 && <5, dbus >=1.2 && <1.3, xmonad >=0.15 && <0.17, xmonad-contrib >=0.15 && <0.17, X11 >=1.9 && <1.10
  hs-source-dirs:      src
  default-language:    Haskell2010

executable xmonad-zem
  main-is:             Main.hs
  hs-source-dirs:      main
  build-depends:       base >=4.12 && <5, containers >=0.6 && <0.7, dbus >=1.2 && <1.3, xmonad >=0.15 && <0.17, xmonad-contrib >=0.15 && <0.17, zem
  extra-libraries:     xklavier
